更改订单编号 采用uuid

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,3 +42,7 @@ spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.generate-ddl=true
+#ÈÈ²¿Êğ
+spring.devtools.restart.additional-paths=src/main/java
+spring.devtools.restart.enabled=true
+spring.freemarker.cache=false
