--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
 # jdbc\u8FDE\u63A5\u914D\u7F6E
 # mysql
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mall2?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/datadisplay?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
