--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,13 @@
 			<artifactId>poi</artifactId>
 			<version>3.15</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
