--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,24 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+		<!--时间戳转换时间-->
+		<dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.8.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.8</version>
+        </dependency>
 
         <!--spring data jpa 数据持久化组件-->
         <dependency>
